opam-version: "2.0"
maintainer: "you@example.com"
version: "dev"

homepage: "https://github.com/coq-community/coq-program-verification-template"
dev-repo: "git+https://github.com/coq-community/coq-program-verification-template.git"
bug-reports: "https://github.com/coq-community/coq-program-verification-template/issues"
license: "SPDX-identifier-for-your-license"

synopsis: "Coq program verification project template"
description: """
Template project for program verification in Coq.
Uses the Verified Software Toolchain and a classic binary
search program in C as an example."""

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" {>= "8.20"}
  "coq-compcert" {>= "3.16"}
  "coq-vst" {>= "2.16" & < "3~"}
]

tags: [
  "category:Computer Science/Decision Procedures and Certified Algorithms/Correctness proofs of algorithms"
  "keyword:program verification"
  "keyword:your keyword"
  "logpath:ProgramVerificationTemplate"
]
authors: [
  "Your Name"
  "Another Optional Name"
]
