(rocq.theory
 (name ProgramVerificationTemplate)
 (package rocq-program-verification-template)
 (theories Stdlib compcert VST Flocq Ltac2)
 (synopsis "Rocq program verification project template"))

(rule
 (target binary_search.v)
 (deps ../src/binary_search.c)
 (action (run clightgen -o %{target} -normalize %{deps}))
 (mode fallback))
